src/objects/Practitioner_Role__c.object
<CustomObject>
    <fields>
        <fullName>Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Practitioner Roles</relationshipLabel>
        <relationshipName>Practitioner_Role</relationshipName>
        <type>Lookup</type>
    </fields>
     <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                    <default>true</default>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>CARE</fullName>
                </value>
                <value>
                    <fullName>Intrabiz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <formula>Expiry_Date__c  &gt;  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Category__c</fullName>
        <label>Role Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Practitioner</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <label>Role Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Voluntary Breastfeeding Counsellor</fullName>
                </value>
                <value>
                    <fullName>Baby Massage Practitioner</fullName>
                </value>
                <value>
                    <fullName>Postnatal Practitioner</fullName>
                </value>
                <value>
                    <fullName>Antenatal Teacher</fullName>
                </value>
                <value>
                    <fullName>EP Antenatal</fullName>
                </value>
                <value>
                    <fullName>EP BFC Counselling</fullName>
                </value>
                <value>
                    <fullName>EP BFC Facilitation</fullName>
                </value>
                <value>
                    <fullName>Breastfeeding Counsellor</fullName>
                </value>
                <value>
                    <fullName>Breastfeeding Counsellor (Counselling Only)</fullName>
                </value>
                <value>
                    <fullName>NCT Doula</fullName>
                </value>
                <value>
                    <fullName>Introduction to Solids Practitioner</fullName>
                </value>
                <value>
                    <fullName>Postnatal Leader</fullName>
                </value>
                <value>
                    <fullName>EP Postnatal</fullName>
                </value>
                <value>
                    <fullName>Mother and Baby Yoga Practitioner</fullName>
                </value>
                <value>
                    <fullName>Twins and Multiples Practitioner</fullName>
                </value>
                <value>
                    <fullName>EP Birth &amp; Beyond</fullName>
                </value>
                <value>
                    <fullName>Birth &amp; Beyond Practitioner</fullName>
                </value>
                <value>
                    <fullName>Birth &amp; Beyond Practitioner Probationer</fullName>
                </value>
                <value>
                    <fullName>Yoga for Pregnancy Practitioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Status__c</fullName>
        <label>Role Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Practitioner Role</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Practitioner Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Practitioner Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
     <validationRules>
        <fullName>Acquisition_Date_Should_Not_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Acquisition_Date__c )</errorConditionFormula>
        <errorDisplayField>Acquisition_Date__c</errorDisplayField>
        <errorMessage>Please enter an Acquisition Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expiry_Date_Should_Not_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Expiry_Date__c )</errorConditionFormula>
        <errorDisplayField>Expiry_Date__c</errorDisplayField>
        <errorMessage>Please enter an Expiry Date</errorMessage>
    </validationRules>
	  <validationRules>
        <fullName>Expiry_Date_Should_be_Greater_than_Today</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
ISNEW(), 
ISCHANGED(Expiry_Date__c) 
), 
Expiry_Date__c &lt; TODAY() 
)</errorConditionFormula>
        <errorDisplayField>Expiry_Date__c</errorDisplayField>
        <errorMessage>Expiration date should be greater than Today&apos;s date</errorMessage>
    </validationRules>
</CustomObject>